updated to include argline used in other failsafe tests