@@ -79,6 +79,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                             <includes>
                                 <include>org/owasp/encoder/BenchmarkTest.java</include>
                             </includes>
